<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Planner</string>
    <string name="sorting_dialog">Sorting...</string>
    <string name="loading_dialog">Loading...</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet</string>
    <string name="dummy_text_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ullamcorper orci neque, sed sagittis ipsum elementum at. Integer viverra iaculis quam, ac lacinia nibh lacinia sit amet. Sed varius ullamcorper ipsum sit amet interdum. Sed quis feugiat urna. Mauris laoreet arcu sed erat eleifend, et porttitor enim laoreet. Mauris luctus ut diam in dignissim. Cras ac bibendum felis. Quisque facilisis sagittis risus. Sed nec elementum neque. Etiam nec sagittis urna, sit amet condimentum libero.</string>
    <string name="boarding_card_summary">%1$s - %2$s > %3$s</string>
    <string name="unsorted_boarding_cards">Unsorted boarding cards:</string>
    <string name="sorted_boarding_cards">Sorted trip:</string>
    <string name="btn_sort">Sort Trip</string>
    <string name="lbl_from">From: </string>
    <string name="lbl_to">To: </string>
    <string name="lbl_id">ID: </string>
    <string name="lbl_seat">Seat: </string>
    <string name="lbl_gate">Gate: </string>
    <string name="lbl_baggage">Baggage: </string>


</resources>
