<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/gap_small"
    android:paddingLeft="@dimen/gap_normal"
    android:paddingRight="@dimen/gap_normal"
    android:paddingTop="@dimen/gap_small">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/gap_small"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_launcher"
            tools:src="@drawable/ic_train" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TableRow android:id="@+id/rowFrom">

                <TextView
                    android:id="@+id/lblFrom"
                    android:layout_marginRight="@dimen/gap_normal"
                    android:text="@string/lbl_from"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtFrom"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/dummy_text" />
            </TableRow>

            <TableRow android:id="@+id/rowTo">

                <TextView
                    android:id="@+id/lblTo"
                    android:text="@string/lbl_to"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtTo"
                    android:textSize="@dimen/text_size"
                    tools:text="@string/dummy_text" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/gap_normal"
        android:layout_marginRight="@dimen/gap_normal"
        android:layout_marginTop="@dimen/gap_normal"
        android:background="@color/divider_color" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_normal">

        <TableRow android:id="@+id/rowID">

            <TextView
                android:id="@+id/lblID"
                android:layout_marginRight="@dimen/gap_normal"
                android:text="@string/lbl_id"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtID"
                android:textSize="@dimen/text_size"
                tools:text="@string/dummy_text" />

        </TableRow>

        <TableRow android:id="@+id/rowSeat">

            <TextView
                android:id="@+id/lblSeat"
                android:layout_marginRight="@dimen/gap_normal"
                android:text="@string/lbl_seat"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtSeat"
                android:textSize="@dimen/text_size"
                tools:text="@string/dummy_text" />

        </TableRow>

        <TableRow android:id="@+id/rowGate">

            <TextView
                android:id="@+id/lblGate"
                android:layout_marginRight="@dimen/gap_normal"
                android:text="@string/lbl_gate"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtGate"
                android:textSize="@dimen/text_size"
                tools:text="@string/dummy_text" />
        </TableRow>

        <TableRow android:id="@+id/rowBaggage">

            <TextView
                android:id="@+id/lblBaggage"
                android:layout_marginRight="@dimen/gap_normal"
                android:text="@string/lbl_baggage"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtBaggage"
                android:textSize="@dimen/text_size"
                tools:text="@string/dummy_text" />
        </TableRow>
    </TableLayout>


</LinearLayout>