<?xml version="1.0" encoding="utf-8"?>

<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inAnimation="@anim/fade_in"
    android:outAnimation="@anim/fade_out">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/loading_dialog" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSort"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_normal"
            android:text="@string/btn_sort"/>

        <TextView
            android:layout_margin="@dimen/gap_normal"
            android:id="@+id/txtListTitle"
            android:layout_below="@+id/btnSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsorted_boarding_cards"/>

        <ListView
            android:layout_below="@id/txtListTitle"
            android:id="@+id/listBoardingCards"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


</ViewSwitcher>